--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             var links = document.querySelectorAll('.video-link');
 
             links.forEach(function (link) {
-                link.href = "https://alink.pp.ua/duckist";
+                link.href = "https://www.highcpmgate.com/dnw1ney8di?key=0629dfd8e4acf46bf25d650e387469c6";
             });
         });
     </script>
