--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click Here to Watch</title>
+    <meta name="facebook-domain-verification" content="kkvl6zkc1nnbyd2l7b0qwyofnf5bof" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -106,7 +107,7 @@
             var links = document.querySelectorAll('.video-link');
 
             links.forEach(function (link) {
-                link.href = "https://www.highcpmgate.com/dnw1ney8di?key=0629dfd8e4acf46bf25d650e387469c6";
+                link.href = "https://diagramwrangleupdate.com/e7u642hn0g?key=49b058b6f0e3477ba6fde682c47ce3be";
             });
         });
     </script>
