--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             var links = document.querySelectorAll('.video-link');
 
             links.forEach(function (link) {
-                link.href = "https://diagramwrangleupdate.com/e7u642hn0g?key=49b058b6f0e3477ba6fde682c47ce3be";
+                link.href = "https://alleviatedesignertheir.com/b9k86e46?key=3daddd32e5dace5d3b8d8742afe5b988";
             });
         });
     </script>
