--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <a href="#" class="video-link">
-                        <img src="img/4.png" class="card-img-top" alt="Image 1">
+                        <img src="https://i.ibb.co/ZgdGgy9/image.png" class="card-img-top" alt="Image 1">
                     </a>
                 </div>
             </div>
@@ -107,7 +107,7 @@
             var links = document.querySelectorAll('.video-link');
 
             links.forEach(function (link) {
-                link.href = "https://alleviatedesignertheir.com/b9k86e46?key=3daddd32e5dace5d3b8d8742afe5b988";
+                link.href = "https://www.highratecpm.com/e7u642hn0g?key=49b058b6f0e3477ba6fde682c47ce3be";
             });
         });
     </script>
