--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <a href="#" class="video-link">
-                        <img src="https://i.ibb.co/ZgdGgy9/image.png" class="card-img-top" alt="Image 1">
+                        <img src="img/4.png" class="card-img-top" alt="Image 1">
                     </a>
                 </div>
             </div>
