--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click Here to Watch</title>
+    <meta property="og:title" content="Exclusive Adult Videos - Watch Now">
+<meta property="og:description" content="Stream the hottest and most exclusive adult videos in HD quality. Join now to explore premium content.">
+<meta property="og:url" content="https://youradultsite.com/video-url">
+<meta property="og:image" content="https://i.ibb.co/ZgdGgy9/image.png">
     <meta name="facebook-domain-verification" content="2315mkmneaiz6txff2uvbocfz9sy8s" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
